<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/main_bg_gradient3">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!-- Full Name -->
            <TextView
                android:text="@string/full_name"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/nameInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_your_name"
                android:background="@drawable/stroke_white_bg"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/background_dark"
                android:textColorHint="#a2a4b5"/>

            <!-- Email -->
            <TextView
                android:text="Email"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/registerEmailInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:background="@drawable/stroke_white_bg"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/background_dark"
                android:textColorHint="#a2a4b5" />

            <!-- Password -->
            <TextView
                android:text="Password"
                android:textColor="@color/blue_dark"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <EditText
                android:id="@+id/registerPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/enter_your_password"
                android:inputType="textPassword"
                android:background="@drawable/stroke_white_bg"
                android:layout_marginTop="8dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/background_dark"
                android:textColorHint="#a2a4b5" />

            <!-- Confirm Password -->
            <EditText
                android:id="@+id/registerConfirmPasswordInput"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/confirm_your_password"
                android:inputType="textPassword"
                android:background="@drawable/stroke_white_bg"
                android:layout_marginTop="16dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:padding="8dp"
                android:textSize="18sp"
                android:textColor="@color/background_dark"
                android:textColorHint="#a2a4b5" />

            <!-- Register Button -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/registerBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/create_account"
                android:textColor="@color/white"
                style="@android:style/Widget.Button"
                android:textSize="20sp"
                android:layout_marginTop="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/rounded_button2" />

            <!-- Already have an account -->
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/loginRedirect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:background="@drawable/grey_bg"
                style="@android:style/Widget.Button"
                android:text="@string/already_have_an_account_login"
                android:textSize="14sp"
                android:textAlignment="center"
                android:textColor="@color/blue_dark" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>